# mnist

./: CMakeLists.txt  data.cpp  data.h  function.cpp  function.h  layer.cpp  layer.h  main.cpp  mnist_loader.cpp  mnist_loader.h  network.cpp  network.h
